--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.9.1",
     "jotai": "^1.7.6",
     "next": "12.2.3",
     "react": "18.2.0",
