--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "firebase": "^9.9.1",
     "jotai": "^1.7.6",
+    "mongoose": "^6.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
