--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "axios": "^0.27.2",
     "firebase": "^9.9.1",
     "jotai": "^1.7.6",
     "jsonwebtoken": "^8.5.1",
@@ -17,10 +18,10 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "web3": "^1.7.4",
     "react-event-timeline": "^1.6.3",
     "react-hook-form": "^7.34.0",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "@types/node": "18.6.2",
